--- a/index.html
+++ b/index.html
@@ -1514,7 +1514,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>会社</h4>
-                    <a href="#">Hondaについて</a>
+                    <a href="#">Helixについて</a>
                     <a href="#">キャリア</a>
                     <a href="#">プレス</a>
                     <a href="#">投資家情報</a>
